K8s/istio-managing-apps-kubernetes/06/demos/demo2/rng-post/02_authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: numbers-api-authz
  namespace: rng
spec:
  selector:
    matchLabels:
      app: numbers-api
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/rng/sa/numbers-web"]
    to:
    - operation:
        methods: ["GET"]
---
